--- a/build.gradle
+++ b/build.gradle
@@ -11,24 +11,29 @@ version = project.mod_version
 group = project.maven_group
 
 repositories {
-	// Add repositories to retrieve artifacts from in here.
-	// You should only use this when depending on other mods because
-	// Loom adds the essential maven repositories to download Minecraft and libraries from automatically.
-	// See https://docs.gradle.org/current/userguide/declaring_repositories.html
-	// for more information about repositories.
-	maven { url 'https://repo.repsy.io/mvn/gandiber/geckolib' }
-
+	// GECKOLIB STUFF
+	maven {
+		url 'https://repo.repsy.io/mvn/gandiber/geckolib'
+	}
+	maven {
+		url = "https://jitpack.io"
+	}
+	maven {
+		name = "NerdHubMC"
+		url = "https://maven.abusedmaster.xyz/"
+	}
 }
 
 dependencies {
 	minecraft "com.mojang:minecraft:1.16.5"
 	mappings "net.fabricmc:yarn:1.16.5+build.5:v2"
+	// Fabric api
 	modImplementation "net.fabricmc:fabric-loader:0.11.3"
-	//Fabric api
 	modImplementation "net.fabricmc.fabric-api:fabric-api:0.32.0+1.16"
 	// Geckolib api
-	modImplementation 'software.bernie.geckolib:geckolib-fabric-1.16.5:3.0.29:dev'
-
+	modImplementation 'software.bernie.geckolib:geckolib-fabric-1.16.5:3.0.31:dev'
+	// Trinkets API
+	modImplementation "com.github.emilyploszaj:trinkets:v2.6.1"
 }
 
 processResources {
