--- a/build.gradle
+++ b/build.gradle
@@ -13,7 +13,7 @@ group = project.maven_group
 repositories {
 	// GECKOLIB STUFF
 	maven {
-		url 'https://repo.repsy.io/mvn/gandiber/geckolib'
+		url 'https://dl.cloudsmith.io/public/geckolib3/geckolib/maven/'
 	}
 	maven {
 		url = "https://jitpack.io"
@@ -31,7 +31,7 @@ dependencies {
 	modImplementation "net.fabricmc:fabric-loader:0.11.3"
 	modImplementation "net.fabricmc.fabric-api:fabric-api:0.32.0+1.16"
 	// Geckolib api
-	modImplementation 'software.bernie.geckolib:geckolib-fabric-1.16.5:3.0.31:dev'
+	modImplementation 'software.bernie.geckolib:geckolib-fabric-1.16.5:3.0.32:dev'
 	// Trinkets API
 	modImplementation "com.github.emilyploszaj:trinkets:v2.6.1"
 }
